package entities;

public interface Herkunft {
    public Benutzer getBesitzer();
}
