@startuml
class Benutzer{
    String name,
    String passwordHashed
}
class Serie<? extends Event>{
    ? event,
    Date start,
    Wiederholung wiederholung
}

abstract class Event{
    String titel,
    Herkunft herkunft,
    Sichtbarkeit sichtbarkeit,
    String Beschreibung,
    Optional<Serie> Serie
}

Serie "0..1" o-- "0..*" Event
Serie::defaultEvent o-- "1" Event

interface Herkunft{
    getBesitzer(): Benutzer
}

Event "1" o-- "1" Herkunft

interface Sichtbarkeit{
    istSichtbarFuer(Benutzer): bool
}

Event "1" o-- "1" Sichtbarkeit

interface Machbar{
    istGetan(): bool
}

class Aufgabe extends Event implements Machbar{
    Date deadline
}

class GeplanteAufgabe extends Termin implements Machbar {

}

interface Wiederholung{
    naechsterZeitpunktAb(Date): Date,
    alleZeitpunkteInZeitraum(Zeitraum): List<Date>
}

class Termin extends Event{
    Zeitraum zeitraum;
}

class Zuordnung{
    Benutzer benutzer,
    Event event
}

class Zeitraum{
Date start,
Date end
}


Event "1" o-- "0..*" Zuordnung
Benutzer "1" o-- "0..*" Zuordnung
Benutzer "1" o-- "0..*" Herkunft::getBesitzer

Serie "1" o-- "1" Wiederholung


Termin "1" o-- "1" Zeitraum
Wiederholung::alleZeitpunkteInZeitraum <-- Zeitraum
@enduml